# rudurru

./: .gitignore  Cargo.toml  README.md  build.rs  docker-compose.yml  kine-sqlite-waste-analysis.md
.github/workflows/: ci.yml
analysis/: opt-2.5-2.6.md
prd/: btreemap-analysis.md  code-review-2026-06-22.md  compact-bug-rca.md  concurrent-benchmark-design.md  data-model.md  grpc.lib.md  historical-queries.md  jepsen-plan.md  k3s-errors-diagnosis.md  k3s.compat.md  key-comparator-analysis.md  logging.md  optimization.md  p7-zero-copy-design.md  perf-profiling.md  perf-test-atomic.md  perf-test-bytes.md  perf-test-fsync.md  perf-test-lease.md  perf-test-module-split.md  perf-test-p7.md  perf-test.md  prevkv-nil-known-limitation.md  progress.md  rwlock-analysis.md  stress-test.md  switchover.md  too-large-resource-version-analysis.md  transaction-compare-bug-rca.md  wal-gc.md  wal-migration.md
src/: client.rs  lib.rs  main.rs  proto.rs
src/server/: auth.rs  cluster.rs  kv.rs  lease.rs  maintenance.rs  mod.rs  watch.rs
src/storage/: apply.rs  background.rs  mod.rs  state.rs  store.rs  wal.rs  watcher.rs
tests/: auth_test.rs  concurrent_test.rs  kv_test.rs  lease_test.rs  maintenance_test.rs  txn_test.rs  watch_test.rs
tests/common/: mod.rs
